--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,20 @@ edition = "2021"
 authors = ["David Loewe <sd>"]
 
 [dependencies]
-anyhow = "1.0.83"
-async-trait = "0.1.80"
+anyhow = "1.0.97"
+async-trait = "0.1.88"
 byteorder = "1.5.0"
-chrono = "0.4.38"
-clap = { version = "4.5.4", features = ["derive"] }
-crossterm = "0.27.0"
-futures-util = "0.3.30"
-itertools = "0.13.0"
-once_cell = "1.19.0"
-ratatui = { version = "0.26.2", features = ["all-widgets", "unstable-widget-ref"] }
-serde = { version = "1.0.202", features = ["derive"] }
-serde_json = "1.0.117"
-tokio = { version = "1.37.0", features = ["time"] }
-tokio-modbus = { git = "https://github.com/tumbleowlee/tokio-modbus", features = ["futures-util", "rtu-server", "tcp-server"] }
-tokio-serial = "5.4.4"
-unicode-width = "0.1.12"
+chrono = "0.4.40"
+clap = { version = "4.5.34", features = ["derive"] }
+crossterm = "0.28.1"
+futures-util = "0.3.31"
+itertools = "0.14.0"
+once_cell = "1.21.1"
+ratatui = { version = "0.29.0", features = ["all-widgets", "unstable-widget-ref"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.44.1", features = ["time"] }
+tokio-modbus = { version = "0.16.1", features = ["tcp-server", "rtu-server", "futures-util"] }
+#tokio-modbus = { git = "https://github.com/tumbleowlee/tokio-modbus", features = ["futures-util", "rtu-server", "tcp-server"] }
+tokio-serial = "5.4.5"
+unicode-width = "0.2.0"
