--- a/.woodpecker/nightly.yml
+++ b/.woodpecker/nightly.yml
@@ -3,6 +3,7 @@ steps:
     image: rust:latest
 
     commands:
+      - apt-get update && apt-get install -y mingw-w64
       - rustup target add x86_64-pc-windows-gnu
       - cargo check
       - cargo build --release
