--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5.34", features = ["derive"] }
 crossterm = "0.29.0"
 futures-util = "0.3.31"
 itertools = "0.14.0"
+mlua = { version = "0.11.4", features = ["anyhow", "lua54", "vendored"] }
 once_cell = "1.21.1"
 ratatui = { version = "0.29.0", features = ["all-widgets", "unstable-widget-ref"] }
 serde = { version = "1.0.219", features = ["derive"] }
@@ -20,4 +21,5 @@ serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["time"] }
 tokio-modbus = { version = "0.16.1", features = ["tcp-server", "rtu-server", "futures-util"] }
 tokio-serial = "5.4.5"
+toml = "0.9.8"
 unicode-width = "0.2.0"
