--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["lua", "memory", "register", "log", "net", "util"]
+members = ["lua", "memory", "register", "log", "net", "util", "cli"]
